--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -222,6 +222,7 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
+deny 2607:5501:3000:1dc::2;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
@@ -560,6 +561,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
