--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,7 +12,6 @@ allow 103.251.167.20;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
-allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -829,6 +828,7 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.127.231;
+allow 208.85.20.67;
 allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
@@ -1028,7 +1028,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -1060,6 +1059,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1147,6 +1147,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a05:f480:2800:1ee1:5400:5ff:fe16:c47a;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1571,6 +1572,7 @@ allow 45.95.169.130;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 5.104.86.6;
 allow 51.15.59.15;
@@ -1644,6 +1646,7 @@ allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.94.92.106;
+allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
