--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -16,6 +16,7 @@ deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
+deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
@@ -124,6 +125,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:f9f3:0:2::319;
+deny 2602:fa59:5:19f::1;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -318,7 +320,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -551,7 +552,6 @@ deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:1705:be24:11ff:fe8e:bca;
 deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
-deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
