--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,6 +13,7 @@ allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
+allow 104.194.141.8;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -118,7 +119,6 @@ allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
-allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -173,8 +173,10 @@ allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
+allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
+allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -930,6 +932,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:f9f3:0:2::319;
+allow 2602:fa59:1:485::1;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
