--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -12,6 +12,7 @@ set_real_ip_from 103.251.167.20;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
+set_real_ip_from 104.168.144.253;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -208,6 +209,7 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.202;
@@ -896,7 +898,6 @@ set_real_ip_from 23.154.177.4;
 set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
-set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.184.48.254;
 set_real_ip_from 23.184.48.78;
@@ -1028,6 +1029,7 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:5501:3000:1dc::2;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
@@ -1365,7 +1367,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
@@ -1496,7 +1497,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
